# gnome-nano-image-edit

./: .gitignore  .pre-commit-config.yaml  README.md  com.github.konverner.gnome-nano-image-edit.desktop  com.github.konverner.gnome-nano-image-edit.metainfo.xml  com.github.konverner.gnome-nano-image-edit.yml  generate_icons.sh  pyproject.toml  requirements.txt
docs/: architecture.md  development.md
src/: __main__.py  canvas.py  main.py  main_window.py  manager.py  processor.py  window.py
