[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnome-nano-image-edit"
version = "0.1.0"
description = "A lightweight image editing utility tailored for GNOME."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "konverner" }]
dependencies = [
    "pycairo",
]

[project.urls]
Homepage = "https://github.com/konverner/gnome-nano-image-edit"
Repository = "https://github.com/konverner/gnome-nano-image-edit"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
"*" = ["assets/icons/*.png"]
